tests/param_runs_missing_type.stderr
tests/param_runs_missing_type.sl:22:23: error: parameter 'c' is missing type
