tests/param_runs_missing_type.sl
fn example4(a, b int, c) {}
